# Aimbot-Hybrid

./: .env  .gitignore  CONTRIBUTING.md  README.md  build.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
cpp/: CMakeLists.txt
cpp/Capture/: CMakeLists.txt
cpp/Capture/include/: CaptureManager.hpp  ICaptureBackend.hpp  i3ipc.hpp
cpp/Capture/include/backends/: WaylandBackend.hpp  XWaylandBackend.hpp
cpp/Capture/src/: CaptureManager.cpp  i3ipc.cpp
cpp/Capture/src/backends/: WaylandBackend.cpp  XWaylandBackend.cpp
cpp/IMGBuffer/: CMakeLists.txt
cpp/IMGBuffer/include/: buffer.hpp
cpp/IMGBuffer/src/: buffer.cpp
cpp/bindings/: CMakeLists.txt  capture_bind.cpp  capture_module.cpp  imgbuffer_bind.cpp  imgbuffer_module.cpp  module.cpp
cpp/include/: capture.hpp
cpp/src/: capture.cpp
src/aimbot/: main.py
