[project]
name = "aimbot"  # Rename this soon!
version = "0.1.0"
description = "Aimbot"
authors = [{name = "Frank1o3", email = "jahdy1o3@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.15"

dependencies = [
    "i3ipc (>=2.2.1,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "mss (>=10.1.0,<11.0.0)",
    "moviepy (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "pybind11", "pybind11-stubgen", "setuptools", "cmake"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "cmake (>=4.2.1,<5.0.0)",
    "pybind11 (>=3.0.1,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "pybind11-stubgen (>=2.5.5,<3.0.0)"
]
